--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -5,6 +5,8 @@ permalink: /publications/
 author_profile: true
 ---
 
+No publications yet, but there will be some in the future!
+
 {% if site.author.googlescholar %}
   <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
 {% endif %}
